--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,27 +1,103 @@
 .form {
-  font-family: "Oswald", "Arial", sans-serif;
+  padding: 0 0 32px;
+  font-family: $primary-font-family;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
+    padding-bottom: 81px;
     font-size: 20px;
     line-height: 28px;
   }
 }
 
 .form__desc {
+  width: 260px;
+  margin: 0 0 39px;
   font-size: 14px;
   line-height: 18px;
 
   @media (min-width: $tablet-width) {
+    width: 360px;
+    margin-bottom: 65px;
     font-size: 20px;
     line-height: 30px;
   }
 }
 
+.form__section {
+  padding: 0 0 10px;
+  border: none;
+  margin: 0;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 45px;
+  }
+}
+
+.form__section-heading {
+  margin: 0 0 35px;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / 3;
+    margin-bottom: 76px;
+  }
+}
+
+.form__field {
+  margin: 0 0 14px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 19px;
+  }
+}
+
+.form__radiogroup {
+  margin: 23px 0 16px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 72px;
+    margin-bottom: 28px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-row: 1 / 4;
+    grid-column: 2 / 3;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+
+.form__controls {
+  margin: 24px 0 0;
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    margin-top: 8px;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 60px;
+    align-items: center;
+    text-align: left;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 0;
+  }
+}
+
+.form__button {
+  width: 100%;
+  margin: 0 0 17px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 0;
+  }
+}
+
 .form__comment {
-  font-family: "Arial", sans-serif;
+  font-family: $basic-font-family;
   font-size: 14px;
   line-height: 16px;
   text-transform: none;
@@ -29,5 +105,30 @@
   @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 18px;
+  }
+}
+
+.form__section--user {
+  @media (min-width: $desktop-width) {
+    display: grid;
+    margin-bottom: 23px;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 19px;
+    column-gap: 80px;
+  }
+}
+
+.form__section--user .form__field {
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
+  }
+}
+
+.form__section--contacts {
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 80px;
+    align-items: start;
   }
 }
