--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,15 +1,55 @@
 .contacts {
+  display: grid;
+  grid-template-rows: auto auto;
   font-size: 14px;
-  list-style: 20px;
+  line-height: 20px;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 20px;
   }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr 1220px 1fr;
+    align-items: center;
+  }
+}
+
+.contacts__card {
+  display: grid;
+  padding: 26px 20px;
+  grid-template-columns: 1fr 50%;
+  column-gap: 12px;
+  background-color: $background-color;
+
+  @media (min-width: $tablet-width) {
+    column-gap: 40px;
+    padding: 57px 70px 62px;
+  }
+
+  @media (min-width: $desktop-width) {
+    z-index: 3;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    box-sizing: border-box;
+    width: 565px;
+    padding-right: 80px;
+    padding-left: 80px;
+    margin: 80px 0;
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+  }
+}
+
+.contacts__card--alter {
+  @media (max-width: $tablet-max-width) {
+    background-color: transparent;
+  }
 }
 
 .contacts__lead {
-  font-family: "Oswald", "Arial", sans-serif;
+  margin: 0;
+  font-family: $primary-font-family;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
@@ -23,4 +63,42 @@
 .contacts__text {
   font-style: normal;
   color: $text-color-additional;
+
+  @media (min-width: $tablet-width) and (max-width: $tablet-max-width) {
+    text-align: right;
+  }
+}
+
+.contacts__text--address {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.contacts__text-part {
+  @media (min-width: $tablet-width) {
+    margin-top: 20px;
+  }
+}
+
+.contacts__image-wrapper {
+  grid-row: 2 / 3;
+  height: 100%;
+  min-height: 362px;
+
+  @media (min-width: $tablet-width) {
+    min-height: 400px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+  }
+}
+
+.contacts__img {
+  vertical-align: middle;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
