--- a/source/sass/blocks/heading.scss
+++ b/source/sass/blocks/heading.scss
@@ -1,5 +1,6 @@
 .heading {
-  font-family: "Oswald", "Arial", sans-serif;
+  padding: 0;
+  font-family: $primary-font-family;
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
@@ -18,5 +19,50 @@
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
+  }
+}
+
+.heading--decorative {
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0.67em;
+    right: -100vw;
+    left: 1em;
+    z-index: -1;
+    height: 2px;
+    background-color: $background-color-accent;
+  }
+
+  &::first-line {
+    background-color: $background-color;
+  }
+}
+
+.heading__text {
+  padding-right: 20px;
+  box-decoration-break: clone;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 40px;
+  }
+}
+
+.heading--decorative::before {
+  @media (min-width: $tablet-width) {
+    content: "";
+    position: absolute;
+    top: 0.67em;
+    right: calc(100% + 40px);
+    left: -100vw;
+    z-index: -1;
+    height: 2px;
+    background-color: $background-color-accent;
+  }
+
+  @media (min-width: $desktop-width) {
+    right: calc(100% + 40px);
   }
 }
