--- a/source/sass/blocks/separator.scss
+++ b/source/sass/blocks/separator.scss
@@ -1,14 +1,247 @@
+.separator__content {
+  display: flex;
+  width: 280px;
+  height: 232px;
+  margin: 0 auto 10px;
+
+  @media (min-width: $tablet-width) {
+    width: 592px;
+    height: 511px;
+    margin-bottom: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 21px;
+  }
+}
+
+.separator__item {
+  margin: 0;
+}
+
+.separator__image {
+  vertical-align: middle;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.separator__item--before {
+  width: 50%; // Ширина первого изображения.
+
+  .separator__image {
+    object-position: left;
+  }
+}
+
+.separator__item--after {
+  width: 0;
+  flex-grow: 1;
+
+  .separator__image {
+    object-position: right;
+  }
+}
+
+.separator__controls {
+  display: grid;
+  width: 79%;
+  margin: 0 auto;
+  grid-template-columns: min-content 1fr min-content;
+  column-gap: 8px;
+  align-items: center;
+
+  @media (max-width: $mobile-max-width) {
+    max-width: 400px;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 580px;
+    column-gap: 18px;
+  }
+}
+
 .separator__button {
+  min-width: 60px;
+  padding: 10px 0;
   border: none;
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: $primary-font-family;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
   color: $text-color;
   background-color: transparent;
+  cursor: pointer;
+  outline: 2px solid transparent;
+  transition-property: outline-color;
+  transition-duration: $animation-duration;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 28px;
+  }
+
+  &--after {
+    order: 2;
+  }
+
+  &:focus-visible {
+    outline-color: $text-color-additional;
+  }
+}
+
+.separator__button-label {
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: -1px;
+    left: 0;
+    height: 1px;
+    background-image: repeating-linear-gradient(to right, $text-color 0, $text-color 1px, transparent 1px, transparent 2px);
+    opacity: 0.24;
+    transition-property: background-color, opacity;
+    transition-duration: $animation-duration;
+  }
+}
+
+.separator__button:hover .separator__button-label::after {
+  background-color: $text-color;
+  opacity: 0.4;
+}
+
+.separator__button:active .separator__button-label::after {
+  opacity: 0;
+}
+
+.separator__transition-wrapper {
+  display: grid;
+  border-radius: 6px;
+  height: 14px;
+  grid-template-columns: 24px 1fr 24px;
+  background-color: $separator-transition-wrapper-background-color;
+
+  @media (min-width: $tablet-width) {
+    height: 6px;
+    margin-top: 3px;
+    grid-template-columns: 17px 1fr 17px;
+    background-color: $separator-transition-wrapper-background-color-tablet;
+  }
+}
+
+.separator__transition-wrapper::before,
+.separator__transition-wrapper::after {
+  content: "";
+
+  @media (max-width: $mobile-max-width) {
+    border: 1px solid $separator-transition-wrapper-border-color;
+  }
+}
+
+.separator__transition-wrapper::before {
+  border-right: none;
+  border-top-left-radius: inherit;
+  border-bottom-left-radius: inherit;
+}
+
+.separator__transition-wrapper::after {
+  border-left: none;
+  border-top-right-radius: inherit;
+  border-bottom-right-radius: inherit;
+}
+
+.separator__transition-scale {
+  position: relative;
+  border-top: 1px solid $separator-transition-wrapper-border-color;
+  border-bottom: 1px solid $separator-transition-wrapper-border-color;
+
+  @media (min-width: $tablet-width) {
+    border: none;
+  }
+}
+
+.separator__transition-button {
+  position: absolute;
+  top: 3px;
+  left: 50%; /* Положение ползунка */
+  width: 36px;
+  height: 6px;
+  padding: 0;
+  border: none;
+  border-radius: 6px;
+  background-color: $background-color-accent;
+  transform: translateX(-50%);
+  cursor: grab;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  transition-property: border-color, outline-color, opacity, filter;
+  transition-duration: $animation-duration;
+
+  @media (min-width: $tablet-width) {
+    top: -14px;
+    display: flex;
+    width: 34px;
+    height: 34px;
+    border: 1px solid $separator-transition-button-border-color;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    background-color: $separator-transition-button-background-color;
+    filter: drop-shadow(0 1px 3px fade-out($separator-transition-button-shadow-basic-color, 0.84));
+  }
+
+  &:focus-visible {
+    outline-color: $text-color-additional;
+  }
+
+  &:active {
+    cursor: grabbing;
+  }
+}
+
+.separator__transition-button:hover {
+  @media (max-width: $mobile-max-width) {
+    opacity: 0.8;
+  }
+
+  @media (min-width: $tablet-width) {
+    filter: drop-shadow(0 2px 4px fade-out($separator-transition-button-shadow-basic-color, 0.81));
+  }
+}
+
+.separator__transition-button:active {
+  @media (max-width: $mobile-max-width) {
+    opacity: 0.6;
+  }
+
+  @media (min-width: $tablet-width) {
+    border-color: $background-color-accent;
+    filter: drop-shadow(0 3px 5px fade-out($separator-transition-button-shadow-basic-color, 0.8));
+  }
+}
+
+.separator__transition-button::after {
+  @media (min-width: $tablet-width) {
+    content: "";
+    width: 8px;
+    height: 8px;
+    border-radius: inherit;
+    background-color: $background-color-accent;
+  }
+}
+
+.separator__transition-button::before {
+  content: "";
+  position: absolute;
+  top: -12px;
+  right: -10px;
+  bottom: -12px;
+  left: -10px;
+
+  @media (min-width: $tablet-width) {
+    right: -15px;
+    left: -15px;
   }
 }
