--- a/source/sass/blocks/statistics.scss
+++ b/source/sass/blocks/statistics.scss
@@ -1,34 +1,117 @@
-.statistics {
-  font-family: "Oswald", "Arial", sans-serif;
+.statistics__container {
+  @media (min-width: $tablet-width) and (max-width: $tablet-max-width) {
+    position: relative;
+  }
+}
+
+.statistics__list {
+  display: grid;
+  margin: 0;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 10px;
+  column-gap: 32px;
+  align-items: start;
+  text-align: center;
+  font-family: $primary-font-family;
   font-size: 14px;
   line-height: 20px;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
+    grid-template-columns: 23% 23%;
+    row-gap: 16px;
+    column-gap: 40px;
     font-size: 20px;
     line-height: 28px;
   }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 37% 37%;
+  }
+}
+
+.statistics__value {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+.statistics__item--accent {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
 }
 
 .statistics__item--accent .statistics__name {
-  font-family: "Arial", sans-serif;
+  box-sizing: border-box;
+  max-width: 70%;
+  padding: 0 5px;
+  font-family: $basic-font-family;
   font-size: 12px;
   line-height: 12px;
   text-transform: lowercase;
   color: $text-color-additional;
+  background-color: $demo-section-background-color;
+  transform: translateY(-0.8em);
 
   @media (min-width: $tablet-width) {
+    max-width: 88%;
+    padding-right: 8px;
+    padding-left: 8px;
     font-size: 14px;
     line-height: 14px;
+    background-color: $background-color;
+    transform: translateY(-0.6em);
+  }
+
+  @media (min-width: $desktop-width) {
+    background-color: $background-color-secondary;
   }
 }
 
 .statistics__item--accent .statistics__value {
+  width: 100%;
+  padding: 12px 10px 14px;
+  border: 1px solid $statistics-value-border-color;
+  border-radius: 3px;
   font-size: 24px;
   line-height: 28px;
 
   @media (min-width: $tablet-width) {
+    padding: 16px 12px 20px;
     font-size: 30px;
     line-height: 34px;
+  }
+}
+
+.statistics__item--summary {
+  grid-column: 1 / -1;
+  display: flex;
+  margin: 0 auto;
+
+  @media (min-width: $tablet-width) and (max-width: $tablet-max-width) {
+    position: absolute;
+    top: 8px;
+    right: 0;
+    display: block;
+    text-align: right;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 25px;
+    margin-left: 0;
+  }
+}
+
+.statistics__item--summary .statistics__name {
+  @media (min-width: $desktop-width) {
+    margin-right: 63px;
+  }
+}
+
+.statistics__item--summary .statistics__value::before  {
+  content: "\A0";
+
+  @media (min-width: $tablet-width) {
+    display: none;
   }
 }
