--- a/source/sass/blocks/textarea.scss
+++ b/source/sass/blocks/textarea.scss
@@ -1,9 +1,33 @@
 .textarea {
+  display: block;
   color: $text-color-additional;
 }
 
 .textarea__control {
+  box-sizing: border-box;
+  width: 100%;
+  height: 150px;
+  resize: none;
+  padding: 8px 12px 8px 14px;
+  border: 1px solid $form-control-border-color-1;
   font: inherit;
   color: inherit;
   text-transform: inherit;
+  outline: 2px solid transparent;
+  outline-offset: -1px;
+  transition-property: border-color, outline-color;
+  transition-duration: $animation-duration;
+
+  &:focus {
+    outline-color: $text-color-additional;
+  }
+
+  @media (min-width: $tablet-width) {
+    height: 176px;
+    padding: 12px 18px;
+  }
+}
+
+.textarea:hover .textarea__control {
+  border-color: $form-control-border-color-2;
 }
