--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,8 +1,23 @@
 // Viewports
 
-$mobile-width-only: 767px;
+$mobile-min-width: 320px;
+$mobile-min-width-greater: 321px;
+$narrow-mobile-max-width: 359px;
+$mobile-max-width: 767px;
 $tablet-width: 768px;
+$tablet-min-width-greater: 769px;
+$tablet-max-width: 1359px;
 $desktop-width: 1360px;
+$wide-desktop-width: 1441px;
+
+// Fonts
+
+$basic-font-family: "Arial", sans-serif;
+$primary-font-family: "Oswald", "Arial", sans-serif;
+
+// Other
+
+$animation-duration: 80ms;
 
 // Colors
 
@@ -12,6 +27,7 @@ $text-color-additional: #444444;
 $background-color: #ffffff;
 $background-color-secondary: #f2f2f2;
 $background-color-accent: #68b738;
+$error-color: #ff8282;
 
 $button-hover-background-color: #5eaa2f;
 $button-secondary-background-color: #f2f2f2;
@@ -23,3 +39,28 @@ $price-list-name-color: #222222;
 $price-list-info-heading-color: #111111;
 $extra-price-list-name-color: #222222;
 $radiobutton-label-text-color: #222222;
+$site-navigation-item-border-color: #e6e6e6;
+$category-line-color: #d9d9d9;
+$features-section-border-color: #e6e6e6;
+$features-counter-text-color: #f2f2f2;
+$demo-section-background-color: #eaeaea;
+$statistics-value-border-color: #cdcdcd;
+$separator-transition-wrapper-border-color: #cdcdcd;
+$separator-transition-wrapper-background-color: #ffffff;
+$separator-transition-wrapper-background-color-tablet: #dcdcdc;
+$separator-transition-button-background-color: #ffffff;
+$separator-transition-button-border-color: #cdcdcd;
+$separator-transition-button-shadow-basic-color: #000000;
+$page-footer-item-border-color: #d9d9d9;
+$socials-icon-color: #666666;
+$price-list-item-border-color: #ebebeb;
+$price-list-item-tablet-background-color: #f2f2f2;
+$price-list-item-detail-line-color: #cdcdcd;
+$price-list-info-border-color: #f2f2f2;
+$extra-price-list-item-border-color: #cdcdcd;
+$form-control-border-color-1: #e7e7e7;
+$form-control-border-color-2: #cdcdcd;
+$textfield-icon-color: #222222;
+$form-group-border-color: #d9d9d9;
+$radiobutton-border-alter-color: #bababa;
+$checkbox-border-alter-color: #bababa;
