--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 
 @import "blocks/page.scss";
 @import "blocks/page-header.scss";
+@import "blocks/container.scss";
 @import "blocks/site-navigation.scss";
 @import "blocks/hero.scss";
 @import "blocks/heading.scss";
@@ -20,11 +21,16 @@
 @import "blocks/page-footer.scss";
 @import "blocks/contacts.scss";
 @import "blocks/socials.scss";
-@import "blocks/copyright.scss";
+@import "blocks/catalog.scss";
 @import "blocks/price-list.scss";
+@import "blocks/extra-catalog.scss";
 @import "blocks/extra-price-list.scss";
 @import "blocks/notice.scss";
 @import "blocks/form.scss";
 @import "blocks/textfield.scss";
+@import "blocks/radiogroup.scss";
 @import "blocks/radiobutton.scss";
+@import "blocks/checkbox-group.scss";
+@import "blocks/checkbox.scss";
 @import "blocks/textarea.scss";
+@import "blocks/visually-hidden.scss";
