--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -82,6 +82,7 @@
 
 .contacts__image-wrapper {
   grid-row: 2 / 3;
+  grid-column: 1 / -1;
   height: 100%;
   min-height: 362px;
 
@@ -91,7 +92,6 @@
 
   @media (min-width: $desktop-width) {
     grid-row: 1 / 2;
-    grid-column: 1 / -1;
   }
 }
 
@@ -101,4 +101,14 @@
   height: 100%;
   object-fit: cover;
   object-position: center;
+}
+
+.contacts__interactive-map {
+  grid-row: 2 / 3;
+  grid-column: 1 / -1;
+  height: 100%;
+
+  @media (min-width: $desktop-width) {
+    grid-row: 1 / 2;
+  }
 }
